--- a/catalog.html
+++ b/catalog.html
@@ -11,15 +11,15 @@
 <body>
     <header>
         <div class="logo">
-            <a href="#">Device</a>
+            <a href="index.html">Device</a>
         </div>
         <div class="shop_navigation">
             <form action="#" method="get">
                 <input type="search" name="search" class="search" placeholder="Поиск по сайту">
-                <a href="#" class="bth_search">Искать<span class="icon_"></span></a>
+                <a href="#" class="bth_search">Искать</a>
             </form>
-            <div class="catalog_menu">
-                <a href="#" class="header_nav"></a>
+            <div class="catalog_open">
+                  <a href="#" class="catalog_link">Каталог товаров</a>
             </div>
         </div>
         <div class="buyer_menu">
@@ -41,8 +41,8 @@
                 <a href="#">Контакты</a>
             </div>
         </div>
-        <nav>
-            <ul>
+        <nav class="catalog_menu">
+            <ul class="catalog_list">
                 <li>
                     <a href="#">Виртуальная реальность</a>
                 </li>
@@ -53,7 +53,7 @@
                     <a href="#">Экшн-камеры</a>
                 </li>
             </ul>
-            <ul>
+            <ul class="catalog_list">
                 <li>
                     <a href="#">Фитнесс-браслеты</a>
                 </li>
@@ -61,7 +61,7 @@
                     <a href="#">Умные часы</a>
                 </li>
             </ul>
-            <ul>
+            <ul class="catalog_list">
                 <li>
                     <a href="#">Квадрокоптеры</a>
                 </li>
@@ -142,7 +142,7 @@
                     </ul>
                 </div>
                 <div class="sort_direction">
-                    <ul>
+                    <ul class="sort_direct_arrows">
                         <li>
                             <a href="#">Вверх<span class="arrow_inactive icon_"></span></a>
                         </li>
@@ -152,6 +152,7 @@
                     </ul>
                 </div>
             </section>
+            <div class="found_product">
             <article class="product">
                 <img src="" alt="" width="" height="">
                 <div class="product_descript">
@@ -180,9 +181,10 @@
                     <span>4 900 руб.</span>
                 </div>
             </article>
+          </div>
             <div class="pages">
                 <a href="#" class="leaf_results list_previous">Назад</a>
-                <ul class="page">
+                <ul class="page_list">
                     <li>
                         <a class="list_active">1</a>
                     </li>
@@ -200,7 +202,7 @@
     <footer>
         <div class="footer_personal_mode">
             <div class="f_logo">
-                <a href="#">Device</a>
+                <a href="index.html">Device</a>
             </div>
             <div class="f_personal_link">
                 <a href="#">Войти</a>
@@ -209,7 +211,7 @@
             </div>
         </div>
         <div class="footer_info">
-            <span>г. Москваб ул. Строителей, 15</span>
+            <span>г. Москва, ул. Строителей, 15</span>
             <div class="f_about_shop">
                 <a href="#">Доставка</a>
                 <a href="#">Гарантия</a>
@@ -223,7 +225,7 @@
                 <a href="#" class=""><span>Instagram</span></a>
                 <a href="#" class=""><span>Tweeter</span></a>
             </div>
-            <a href="#" class=""></a>
+            <a href="#" class=""><span>Сайт Академии</span></a>
         </div>
     </footer>
 
