Предварительная стилизация главной страницы
Кроме иконок и спрайтов.

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="catalog_header">
         <div class="logo">
             <a href="index.html">Device</a>
         </div>
@@ -200,9 +200,10 @@
         </section>
     </main>
     <footer>
+      <div class="footer_container">
         <div class="footer_personal_mode">
             <div class="f_logo">
-                <a href="index.html">Device</a>
+                <a>Device</a>
             </div>
             <div class="f_personal_link">
                 <a href="#">Войти</a>
@@ -211,13 +212,17 @@
             </div>
         </div>
         <div class="footer_info">
-            <span>г. Москва, ул. Строителей, 15</span>
+            <div class="adds">
+              <span>г. Москва, ул. Строителей, 15</span>
+            </div>
             <div class="f_about_shop">
                 <a href="#">Доставка</a>
                 <a href="#">Гарантия</a>
                 <a href="#">Контакты</a>
             </div>
-            <span>Тел.: +7 (495) 495-95-95</span>
+            <div class="tel">
+              <span>Тел.: +7 (495) 495-95-95</span>
+            </div>
         </div>
         <div class="external_links">
             <div class="social">
@@ -227,7 +232,9 @@
             </div>
             <a href="#" class=""><span>Сайт Академии</span></a>
         </div>
+      </div>
     </footer>
+
 
 </body>
 
