Проверка совпадения высоты страницы catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -87,6 +87,8 @@
             <div class="filter_title">
                 <h2>Фильтр:</h2>
             </div>
+            <!-- работа с боковым меню -->
+            <div class="filter_items">
             <form action="#" method="get">
                 <div class="filter_price">
                     <h3>Стоимость:</h3>
@@ -124,9 +126,11 @@
                 </div>
                 <a href="results.html" class="filter_btn">Показать</a>
             </form>
+          </div>
         </aside>
         <section class="results">
             <section class="sort_header">
+              <div class="sort_header_container">
                 <div class="sort_mode">
                     <h2>Сортировка:</h2>
                     <ul class="criteria">
@@ -151,6 +155,7 @@
                         </li>
                     </ul>
                 </div>
+              </div>
             </section>
             <div class="found_product">
             <article class="product">
@@ -181,7 +186,6 @@
                     <span>4 900 руб.</span>
                 </div>
             </article>
-          </div>
             <div class="pages">
                 <a href="#" class="leaf_results list_previous">Назад</a>
                 <ul class="page_list">
@@ -197,13 +201,14 @@
                 </ul>
                 <a href="#" class="leaf_results list_next">Вперед</a>
             </div>
+          </div>
         </section>
     </main>
     <footer>
       <div class="footer_container">
         <div class="footer_personal_mode">
             <div class="f_logo">
-                <a>Device</a>
+                <a href="index.html">Device</a>
             </div>
             <div class="f_personal_link">
                 <a href="#">Войти</a>
