Частичная стилизация боковой панели (фильтра), проверка кроссбраузерного отображения ползунков

--- a/catalog.html
+++ b/catalog.html
@@ -71,7 +71,7 @@
     <section class="paginator">
         <h1>Моноподы для селфи</h1>
         <div class="paginator_list">
-            <a href="#">Главная</a>
+            <a href="index.html">Главная</a>
             <ul class="paginator_page">
                 <li>
                     <a href="#">Каталог товаров</a>
@@ -87,7 +87,6 @@
             <div class="filter_title">
                 <h2>Фильтр:</h2>
             </div>
-            <!-- работа с боковым меню -->
             <div class="filter_items">
             <form action="#" method="get">
                 <div class="filter_price">
@@ -104,7 +103,7 @@
                         <input type="text" name="max-price" value="до 5000">
                     </div>
                 </div>
-                <div class="color_selection">
+                <div class="filter_selection">
                     <h3>Цвет:</h3>
                     <input type="checkbox" name="black_color" id="black_color" checked>
                     <label for="black_color">Черный</label>
@@ -117,7 +116,7 @@
                     <input type="checkbox" name="pink_color" id="pink_color">
                     <label for="pink_color">Розовый</label>
                 </div>
-                <div class="bluetooth_mode">
+                <div class="filter_selection">
                     <h3>Bluetooth:</h3>
                     <input type="radio" name="bluetooth" id="bth_theres" checked>
                     <label for="bth_theres">Есть</label>
@@ -135,7 +134,7 @@
                     <h2>Сортировка:</h2>
                     <ul class="criteria">
                         <li>
-                            <a href="#">По цене</a>
+                            <a>По цене</a>
                         </li>
                         <li>
                             <a href="#" class="sort_inactive">По типу</a>
