пополнение стилизации обеих страниц, добавление модального окна обратной связи.

--- a/catalog.html
+++ b/catalog.html
@@ -16,10 +16,10 @@
         <div class="shop_navigation">
             <form action="#" method="get">
                 <input type="search" name="search" class="search" placeholder="Поиск по сайту">
-                <a href="#" class="bth_search">Искать</a>
+                <a href="#" class="btn_search">Найти</a>
             </form>
             <div class="catalog_open">
-                  <a href="#" class="catalog_link">Каталог товаров</a>
+                  <a class="catalog_link">Каталог товаров</a>
             </div>
         </div>
         <div class="buyer_menu">
@@ -158,35 +158,52 @@
             </section>
             <div class="found_product">
             <article class="product">
-                <img src="" alt="" width="" height="">
+                <div class="purchase_mode">
+                  <a href="#" class="buy">В корзину</a>
+                  <a href="#" class="compare">Добавить к сравнению</a>
+                </div>
+                <img src="img/amateur_self_st.jpg" alt="Любительская селфи-палка" width="360" height="380">
                 <div class="product_descript">
                     <h2>Любительская селфи-палка</h2>
                     <span>500 руб.</span>
                 </div>
             </article>
             <article class="product">
-                <img src="" alt="" width="" height="">
+              <div class="purchase_mode">
+                <a href="#" class="buy">В корзину</a>
+                <a href="#" class="compare">Добавить к сравнению</a>
+              </div>
+                <img src="img/pro_self_st.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
                 <div class="product_descript">
                     <h2>Профессиональная селфи-палка</h2>
                     <span>1 500 руб.</span>
                 </div>
             </article>
             <article class="product">
-                <img src="" alt="" width="" height="">
+              <div class="purchase_mode">
+                <a href="#" class="buy">В корзину</a>
+                <a href="#" class="compare">Добавить к сравнению</a>
+              </div>
+                <img src="img/float_self_st.jpg" alt="Плавучая селфи-палка" width="360" height="380">
                 <div class="product_descript">
                     <h2>Непотопляемая селфи-палка</h2>
                     <span>2 500 руб.</span>
                 </div>
             </article>
             <article class="product">
-                <img src="" alt="" width="" height="">
+              <div class="purchase_mode">
+                <a href="#" class="buy">В корзину</a>
+                <a href="#" class="compare">Добавить к сравнению</a>
+              </div>
+                <img src="img/hand_self_st.jpg" alt="Селфи-палка в виде руки Следуй за мной" width="360" height="380">
+                <span class="icon_new" title="Новинка!">New</span>
                 <div class="product_descript">
                     <h2>Селфи-палка "Следуй за мной"</h2>
                     <span>4 900 руб.</span>
                 </div>
             </article>
             <div class="pages">
-                <a href="#" class="leaf_results list_previous">Назад</a>
+                <a class="leaf_results list_previous">Назад</a>
                 <ul class="page_list">
                     <li>
                         <a class="list_active">1</a>
@@ -238,7 +255,6 @@
         </div>
       </div>
     </footer>
-
 
 </body>
 
