--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+  <!-- для вызова всплывающего меню, эксперимент -->
+    <input type="checkbox" id="menu_show">
     <header class="index_header">
         <div class="logo">
             <a>Device</a>
@@ -20,6 +22,7 @@
             </form>
             <div class="catalog_open">
                 <a href="catalog.html" class="catalog_link">Каталог товаров</a>
+                <label for="menu_show" title="Навигационное меню"></label>
             </div>
         </div>
         <div class="buyer_menu">
@@ -28,8 +31,8 @@
                     <a href="#" class="login">Войти<span class="icon_"></span></a>
                 </div>
                 <div class="selected_product_mode">
-                    <a href="#">Сравнить<span class="icon_"></span></a>
-                    <a href="#">Корзина<span class="icon_"></span></a>
+                    <a href="#" class="compare_link">Сравнить</a>
+                    <a href="#" class="basket">Корзина</a>
                 </div>
             </div>
             <div class="about_us">
@@ -72,9 +75,9 @@
         <input type="radio" name="promo_selector" id="pr_2">
         <input type="radio" name="promo_selector" id="pr_3">
         <div class="promo_toogle">
-            <label for="pr_1"><span class="toogle_descript">Первый слайд</span></label>
-            <label for="pr_2"><span class="toogle_descript">Второй слайд</span></label>
-            <label for="pr_3"><span class="toogle_descript">Третий слайд</span></label>
+            <label for="pr_1"><span class="reader_descript">Первый слайд</span></label>
+            <label for="pr_2"><span class="reader_descript">Второй слайд</span></label>
+            <label for="pr_3"><span class="reader_descript">Третий слайд</span></label>
         </div>
         <div class="pr_slide pr_slide1">
             <span class="slide_number">01</span>
@@ -229,9 +232,9 @@
                     <a>Device</a>
                 </div>
                 <div class="f_personal_link">
-                    <a href="#">Войти</a>
-                    <a href="#">Сравнить</a>
-                    <a href="#">Корзина</a>
+                    <a href="#" class="ft_login">Войти</a>
+                    <a href="#" class="ft_compare">Сравнить</a>
+                    <a href="#" class="ft_basket">Корзина</a>
                 </div>
             </div>
             <div class="footer_info">
@@ -249,11 +252,11 @@
             </div>
             <div class="external_links">
                 <div class="social">
-                    <a href="#" class=""><span>Facebook</span></a>
-                    <a href="#" class=""><span>Instagram</span></a>
-                    <a href="#" class=""><span>Tweeter</span></a>
+                    <a href="#" class="facebook"><span class="reader_descript">Facebook</span></a>
+                    <a href="#" class="instagram"><span class="reader_descript">Instagram</span></a>
+                    <a href="#" class="tweeter"><span class="reader_descript">Tweeter</span></a>
                 </div>
-                <a href="#" class=""><span>Сайт Академии</span></a>
+                <a href="#" class="academylogo"><span class="reader_descript">Сайт Академии</span></a>
             </div>
           </div>
         </footer>
