--- a/catalog.html
+++ b/catalog.html
@@ -93,17 +93,17 @@
             <div class="filter_items">
             <form action="#" method="get">
                 <div class="filter_price">
-                    <h3>Стоимость:</h3>
+                    <h3>Стоимость</h3>
                     <div class="range_controls">
                         <div class="scale">
                             <div class="bar"></div>
-                            <div class="toogle toogle_min"></div>
-                            <div class="toogle toogle_max"></div>
+                            <div class="toogle toogle_min"><span class="reader_descript">Цена, от</span></div>
+                            <div class="toogle toogle_max"><span class="reader_descript">Цена, до</span></div>
                         </div>
                     </div>
                 </div>
                 <div class="filter_selection">
-                    <h3>Цвет:</h3>
+                    <h3>Цвет</h3>
                     <input type="checkbox" name="black_color" id="black_color" checked>
                     <label for="black_color">Черный</label>
                     <input type="checkbox" name="white_color" id="white_color">
@@ -116,7 +116,7 @@
                     <label for="pink_color">Розовый</label>
                 </div>
                 <div class="filter_selection">
-                    <h3>Bluetooth:</h3>
+                    <h3>Bluetooth</h3>
                     <input type="radio" name="bluetooth" id="bth_theres" checked>
                     <label for="bth_theres">Есть</label>
                     <input type="radio" name="bluetooth" id="bth_not">
@@ -195,7 +195,7 @@
                 <a href="#" class="compare">Добавить к сравнению</a>
               </div>
                 <img src="img/hand_self_st.jpg" alt="Селфи-палка в виде руки Следуй за мной" width="360" height="380">
-                <span class="icon_new" title="Новинка!">New</span>
+                <span class="icon_new"><span class="reader_descript">Новинка!</span>New</span>
                 <div class="product_descript">
                     <h2>Селфи-палка "Следуй за мной"</h2>
                     <span>4 900 руб.</span>
