--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <a href="#" class="nav_item">
             <h2>Виртуальная реальность</h2>
         </a>
-        <a href="#" class="nav_item">
+        <a href="catalog.html" class="nav_item">
             <h2>Моноподы для селфи</h2>
         </a>
         <a href="#" class="nav_item">
@@ -173,7 +173,7 @@
             </div>
             <div class="adv_slide">
                 <h3>Гарантия</h3>
-                <p>Если из-за возгорания купленного у нас товара у вас сгорит дом &mdash; не переживайте, мы выдадим вам новый.</p>
+                <p>Если из-за возгорания купленного у нас товара у вас сгорит дом &ndash; не переживайте, мы выдадим вам новый.</p>
                 <p>Товар, не дом, конечно же.</p>
             </div>
             <div class="adv_slide">
@@ -184,10 +184,10 @@
       </div>
     </section>
     <section class="manufacturers">
-        <a href="#" title="DJI"></a>
-        <a href="#" title="SP Gadgets"></a>
-        <a href="#" title="GoPro"></a>
-        <a href="#" title="Vive"></a>
+        <a href="#"><h6 class="reader_descript">Все товары производителя: DJI</h6></a>
+        <a href="#"><h6 class="reader_descript">Все товары производителя: SP Gadgets</h6></a>
+        <a href="#"><h6 class="reader_descript">Все товары производителя: GoPro</h6></a>
+        <a href="#"><h6 class="reader_descript">Все товары производителя: VIVE</h6></a>
     </section>
     <section class="info">
         <div class="description">
@@ -207,7 +207,9 @@
             <a href="map.html" class="map"><img src="./img/map.jpg" alt="Карта" width="560" height="222" title="Развернуть карту"></a>
             <a href="feedback.html" class="info_btn feedback_mail">Напишите нам</a>
         </div>
+        <!-- Модальное окно обратной связи -->
         <div class="feedback">
+          <a href="#" class="close_btn"><span class="reader_descript">Закрыть окно обратной связи</span></a>
           <form action="#" method="post">
           <div class="user_info">
             <label for="client_name">Ваше имя:</label>
@@ -223,6 +225,10 @@
           </div>
           <button type="submit" class="mail_submit">Отправить</button>
           </form>
+        </div>
+        <!-- модальное окно развёрнутой карты -->
+        <div class="detailed_map">
+          <a href="#" class="close_btn"><span class="reader_descript">Закрыть окно обратной связи</span></a>
         </div>
     </section>
         <footer>
