Модальные окна и анимация (предварительная)

--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
         <div class="buyer_menu">
             <div class="personal_mode">
                 <div class="login_logout">
-                    <a href="#" class="personal_area">Валентин Петухов<span class="icon_"></span></a>
+                    <a href="#" class="personal_area">Валентин Петухов</a>
                     <a href="#" class="logout">Выйти</a>
                 </div>
                 <div class="selected_product_mode">
@@ -38,10 +38,10 @@
             </div>
             <div class="about_us">
                 <div class="adv_links">
-                    <a href="#">Доставка</a>
-                    <a href="#">Гарантии</a>
+                    <a href="index.html #advantages">Доставка</a>
+                    <a href="index.html #advantages">Гарантии</a>
                 </div>
-                <a href="#">Контакты</a>
+                <a href="index.html #contacts">Контакты</a>
             </div>
         </div>
     </header>
@@ -80,7 +80,7 @@
                     <a href="#">Каталог товаров</a>
                 </li>
                 <li>
-                    <a href="#">Моноподы для селфи</a>
+                    <a>Моноподы для селфи</a>
                 </li>
             </ul>
         </div>
@@ -163,7 +163,7 @@
                 </div>
                 <img src="img/amateur_self_st.jpg" alt="Любительская селфи-палка" width="360" height="380">
                 <div class="product_descript">
-                    <h2>Любительская селфи-палка</h2>
+                    <a href="#">Любительская селфи-палка</a>
                     <span>500 руб.</span>
                 </div>
             </article>
@@ -174,7 +174,7 @@
               </div>
                 <img src="img/pro_self_st.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
                 <div class="product_descript">
-                    <h2>Профессиональная селфи-палка</h2>
+                    <a href="#">Профессиональная селфи-палка</a>
                     <span>1 500 руб.</span>
                 </div>
             </article>
@@ -185,7 +185,7 @@
               </div>
                 <img src="img/float_self_st.jpg" alt="Плавучая селфи-палка" width="360" height="380">
                 <div class="product_descript">
-                    <h2>Непотопляемая селфи-палка</h2>
+                    <a href="#">Непотопляемая селфи-палка</a>
                     <span>2 500 руб.</span>
                 </div>
             </article>
@@ -197,7 +197,7 @@
                 <img src="img/hand_self_st.jpg" alt="Селфи-палка в виде руки Следуй за мной" width="360" height="380">
                 <span class="icon_new"><span class="reader_descript">Новинка!</span>New</span>
                 <div class="product_descript">
-                    <h2>Селфи-палка "Следуй за мной"</h2>
+                    <a href="#">Селфи-палка "Следуй за мной"</a>
                     <span>4 900 руб.</span>
                 </div>
             </article>
@@ -236,9 +236,9 @@
               <span>г. Москва, ул. Строителей, 15</span>
             </div>
             <div class="f_about_shop">
-                <a href="#">Доставка</a>
-                <a href="#">Гарантия</a>
-                <a href="#">Контакты</a>
+                <a href="index.html #advantages">Доставка</a>
+                <a href="index.html #advantages">Гарантия</a>
+                <a href="index.html #contacts">Контакты</a>
             </div>
             <div class="tel">
               <span>Тел.: +7 (495) 495-95-95</span>
