--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="buyer_menu">
             <div class="personal_mode">
                 <div class="login_logout">
-                    <a href="#" class="login">Войти<span class="icon_"></span></a>
+                    <a href="#" class="login">Войти</a>
                 </div>
                 <div class="selected_product_mode">
                     <a href="#" class="compare_link">Сравнить</a>
@@ -37,10 +37,10 @@
             </div>
             <div class="about_us">
                 <div class="adv_links">
-                    <a href="#">Доставка</a>
-                    <a href="#">Гарантии</a>
+                    <a href="#advantages">Доставка</a>
+                    <a href="#advantages">Гарантии</a>
                 </div>
-                <a href="#">Контакты</a>
+                <a href="#contacts">Контакты</a>
             </div>
         </div>
     </header>
@@ -50,7 +50,7 @@
                 <a href="#">Виртуальная реальность</a>
             </li>
             <li>
-                <a href="#">Моноподы для селфи</a>
+                <a href="catalog.html">Моноподы для селфи</a>
             </li>
             <li>
                 <a href="#">Экшн-камеры</a>
@@ -148,7 +148,7 @@
             <h2>Квадрокоптеры</h2>
         </a>
     </section>
-    <section class="advantages_slider">
+    <section class="advantages_slider" id="advantages">
       <div class="advantages_slider_container">
         <input type="radio" name="adv_radio" id="advantages_delivery" checked>
         <input type="radio" name="adv_radio" id="advantages_guarantee">
@@ -202,7 +202,7 @@
             <a href="#" class="info_btn">Подробнее о нас</a>
         </div>
         <div class="contacts">
-            <h2>Контакты</h2>
+            <h2 id="contacts">Контакты</h2>
             <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
             <a href="map.html" class="map"><img src="./img/map.jpg" alt="Карта" width="560" height="222" title="Развернуть карту"></a>
             <a href="feedback.html" class="info_btn feedback_mail">Напишите нам</a>
@@ -210,7 +210,7 @@
         <!-- Модальное окно обратной связи -->
         <div class="feedback">
           <a href="#" class="close_btn"><span class="reader_descript">Закрыть окно обратной связи</span></a>
-          <form action="#" method="post">
+          <form action="#" method="post" class="feedback_form">
           <div class="user_info">
             <label for="client_name">Ваше имя:</label>
             <input type="text" name="client_name" id="client_name" placeholder="Представьтесь, пожалуйста">
@@ -228,7 +228,7 @@
         </div>
         <!-- модальное окно развёрнутой карты -->
         <div class="detailed_map">
-          <a href="#" class="close_btn"><span class="reader_descript">Закрыть окно обратной связи</span></a>
+          <a href="#" class="close_btn"><span class="reader_descript">Свернуть карту</span></a>
         </div>
     </section>
         <footer>
@@ -248,9 +248,9 @@
                   <span>г. Москва, ул. Строителей, 15</span>
                 </div>
                 <div class="f_about_shop">
-                    <a href="#">Доставка</a>
-                    <a href="#">Гарантия</a>
-                    <a href="#">Контакты</a>
+                    <a href="#advantages">Доставка</a>
+                    <a href="#advantages">Гарантия</a>
+                    <a href="#contacts">Контакты</a>
                 </div>
                 <div class="tel">
                   <span>Тел.: +7 (495) 495-95-95</span>
@@ -266,7 +266,7 @@
             </div>
           </div>
         </footer>
-
+ <script src="./js/script.js"></script>
 </body>
 
 </html>
