--- a/catalog.html
+++ b/catalog.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+ <div class="container">
   <!-- для вызова всплывающего меню, эксперимент -->
   <input type="checkbox" id="menu_show">
     <header class="catalog_header">
@@ -219,6 +220,7 @@
           </div>
         </section>
     </main>
+  </div>
     <footer>
       <div class="footer_container">
         <div class="footer_personal_mode">
