--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <!-- для вызова всплывающего меню, эксперимент -->
+  <div class="container">
+    <!-- для вызова всплывающего меню, эксперимент -->
     <input type="checkbox" id="menu_show">
     <header class="index_header">
         <div class="logo">
@@ -231,6 +232,7 @@
           <a href="#" class="close_btn"><span class="reader_descript">Свернуть карту</span></a>
         </div>
     </section>
+  </div>
         <footer>
           <div class="footer_container">
             <div class="footer_personal_mode">
